[project]
name = "deep-learning-with-pytorch-lightning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
]
